# chip8-emulator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.lua  imgui_main.cpp  main.c  run.lua
inc/: chip8.h  display.h  font.h  keyboard.h  log.h  script.h  utilities.h
scripts/: config.lua  run.lua
src/: chip8.c  display.c  keyboard.c  log.c  main.c  script.c
testbin/: debug.ch8
